split data into low and high GDP sets; calculating the quartiles

--- a/le_by_country.ipynb
+++ b/le_by_country.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "id": "68e2099f",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "id": "664385e4",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
        "4  Antigua and Barbuda 75.06            9759.31"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "id": "590f014f",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
    "id": "af2bcc33",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 51,
    "id": "374f06c3",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
        "Name: life_expectancy, dtype: float64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "id": "ea1a5d8d",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "[62.325, 72.525, 75.44218749999999]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 53,
    "id": "e2fbc263",
    "metadata": {},
    "outputs": [
@@ -319,6 +319,212 @@
     "plt.ylabel('Frequency')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebdffd22",
+   "metadata": {},
+   "source": [
+    "The narrowest quartile is between 72 and 75 years. We can see this represented in the histogram through the larger spike of data around 75 years.\n",
+    "\n",
+    "If the country has a life expectancy of 70 years, it falls to the second quartile of the data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65bc5a3c",
+   "metadata": {},
+   "source": [
+    "## Splitting the Data by GDP\n",
+    "\n",
+    "GDP is a mesaure of a country’s wealth. Let’s now use the GDP data to see if life expectancy is affected by this value.\n",
+    "\n",
+    "Let’s split the data into two groups based on GDP. If we find the median GDP, we can create two datasets for “low GDP countries” and “high GDP countries."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "a8a35571",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create GDP series\n",
+    "gdp = df['gdp']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "35e23a7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2938.0781155"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculate median GDP\n",
+    "median_gdp = np.quantile(gdp, 0.5)  # or gdp.median()\n",
+    "median_gdp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "0104f433",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>life_expectancy</th>\n",
+       "      <th>gdp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>58.19</td>\n",
+       "      <td>340.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>75.16</td>\n",
+       "      <td>2119.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>73.62</td>\n",
+       "      <td>2847.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>49.02</td>\n",
+       "      <td>1975.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Armenia</td>\n",
+       "      <td>73.40</td>\n",
+       "      <td>1999.99</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       country  life_expectancy     gdp\n",
+       "0  Afghanistan 58.19            340.02 \n",
+       "1  Albania     75.16            2119.73\n",
+       "2  Algeria     73.62            2847.85\n",
+       "3  Angola      49.02            1975.14\n",
+       "6  Armenia     73.40            1999.99"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# split the gdp data into low and high GDP countries\n",
+    "low_gdp = df.loc[df['gdp'] <= median_gdp, :]\n",
+    "high_gdp = df.loc[df['gdp'] > median_gdp, :]\n",
+    "\n",
+    "low_gdp.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "f4ea30d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([56.3375 , 64.34375, 71.7375 ])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find the quartiles of of the life_expectancy\n",
+    "low_gdp_quartiles = np.quantile(low_gdp['life_expectancy'], [0.25, 0.5, 0.75])\n",
+    "low_gdp_quartiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "75da9a41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([72.965625, 75.15625 , 80.521875])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "high_gdp_quartiles = np.quantile(high_gdp['life_expectancy'], [0.25, 0.5, 0.75])\n",
+    "high_gdp_quartiles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25b0d891",
+   "metadata": {},
+   "source": [
+    "## Histogram and Conclusions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cdfed92",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
